--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -601,7 +601,7 @@
   "no_contacts_yet": "No contacts yet, <a href='#'' data-toggle='modal' data-target='#add_contact_modal'>add one.</a>",
   "no_do_not_cancel": "Ne odjavljuj",
   "no_longer_for_sale": "Više nije na prodaju.",
-  "no_messages_available": "No messages available, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send one</a>.",
+  "no_messages_available": "No messages available.",
   "no_name_set": "Ime nije odabrano",
   "no_open_buy_orders": "Nema otvorenih naloga na kupnji.",
   "no_open_sell_orders": "Nema otvorenih prodajnih naloga.",
