--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -601,7 +601,7 @@
   "no_contacts_yet": "Καμία επαφή ακόμα",
   "no_do_not_cancel": "Οχι, καμία ακυρώση",
   "no_longer_for_sale": "Δεν είναι πλέον προς πώληση.",
-  "no_messages_available": "No messages available, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send one</a>.",
+  "no_messages_available": "No messages available",
   "no_name_set": "No Name Set",
   "no_open_buy_orders": "No open buy orders.",
   "no_open_sell_orders": "No open sell orders.",
