translations for smart contract payment types

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Количеството трябва да бъде цяло число.",
   "error_word_list": "Не може да се зареди списък с думи...",
   "error_wrong_buyer_for_alias": "Грешен купувач на псевдоним.",
-  "escrow": "Escrow",
+  "escrow": "Набирателна",
   "experimental_release": "Експериментално издание",
   "export_contact": "Експортирай контактите",
   "failed": "Неуспешно",
@@ -511,6 +511,7 @@
   "last_feeder": "Последен източник",
   "last_feeder_height": "Височина на блоковете на последния източник",
   "last_updated": "Последна дата",
+  "leasing": "Лизинг",
   "list_product_for_sale": "Вписване на продукт за продажба",
   "loading": "Зареждане...",
   "loading_please_wait": "Зареждане, моля изчакайте",
@@ -749,6 +750,7 @@
   "repeat": "Повтори",
   "request_burst": "Request BURST",
   "returning_user_q": "Връщащ се потребител?",
+  "reward_recipient": "Награда Получател",
   "same_out": "Same Amount",
   "search_aliases": "Търси псевдоними...",
   "search_assets": "Търси активи...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Показване на бутон дневник конзола",
   "signature_hash": "Подпис хеш",
   "signed_transaction_bytes": "Байта на подписана сделка",
+  "smart_contract": "Смарт договор",
+  "smart_contract_creation": "Създаване на интелигентен договор",
+  "smart_contract_payment": "Плащане на интелигентен договор",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "стандарт",
   "start_date": "От дата",
