--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -511,6 +511,7 @@
   "last_feeder": "Poslední Feeder",
   "last_feeder_height": "Výška posledního Feedera",
   "last_updated": "Naposledy aktualizováno",
+  "leasing": "Leasing",
   "list_product_for_sale": "Seznam produktů na prodej",
   "loading": "Načítám...",
   "loading_please_wait": "Načítám, vyčkejte prosím",
@@ -749,6 +750,7 @@
   "repeat": "Znovu",
   "request_burst": "Request BURST",
   "returning_user_q": "Stávající uživatel?",
+  "reward_recipient": "Příjemce odměny",
   "same_out": "Same Amount",
   "search_aliases": "Hledat aliasy...",
   "search_assets": "Hledat aktiva...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Zobrazit tlačítko logovací konzole",
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Počet bajtů podepsané transakce",
+  "smart_contract": "Inteligentní smlouva",
+  "smart_contract_creation": "Vytvoření inteligentní smlouvy",
+  "smart_contract_payment": "Platba inteligentní smlouvy",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standard",
   "start_date": "Počátek",
