--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Η ποσότητα πρέπει να είναι ακέραιος αριθμός.",
   "error_word_list": "φόρτωση της λίστας λέξεων αδύνατη...",
   "error_wrong_buyer_for_alias": "Λάθος αγοραστής για το ψευδώνυμο.",
-  "escrow": "Escrow",
+  "escrow": "Χρηματική εγγύηση",
   "experimental_release": "πειραματική έκδοση",
   "export_contact": "Εξαγωγή επαφών",
   "failed": "απέτυχε",
@@ -511,6 +511,7 @@
   "last_feeder": "Τελευταία ενημέρωση",
   "last_feeder_height": "Last Feeder Height",
   "last_updated": "Τελευταία ενημέρωση",
+  "leasing": "Μίσθωση",
   "list_product_for_sale": "Λίστα προϊόντων προς πώληση",
   "loading": "Φόρτωση...",
   "loading_please_wait": "Φόρτωμα, παρακαλώ περιμένετε",
@@ -749,6 +750,7 @@
   "repeat": "Επανάληψη",
   "request_burst": "Request BURST",
   "returning_user_q": "Επιστροφή χρήστη;",
+  "reward_recipient": "Ανταμοιβή παραλήπτη",
   "same_out": "Same Amount",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Show Console Log Button",
   "signature_hash": "Signature Hash",
   "signed_transaction_bytes": "Signed Transaction Bytes",
+  "smart_contract": "Έξυπνη σύμβαση",
+  "smart_contract_creation": "Δημιουργία έξυπνης σύμβασης",
+  "smart_contract_payment": "Πληρωμή της έξυπνης σύμβασης",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Πρότυπο",
   "start_date": "Ημερομηνία έναρξης",
