--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "La quantité doit être un nombre entier.",
   "error_word_list": "Le chargement de la liste de mots a échoué...",
   "error_wrong_buyer_for_alias": "Mauvais acheteur pour l'alias.",
-  "escrow": "Escrow",
+  "escrow": "Escroc",
   "experimental_release": "Version bêta",
   "export_contact": "Exporter des contacts",
   "failed": "Échoué",
@@ -511,6 +511,7 @@
   "last_feeder": "Dernier relayeur",
   "last_feeder_height": "Hauteur du dernier relayeur",
   "last_updated": "Dernière mise à jour",
+  "leasing": "Location",
   "list_product_for_sale": "Liste des produits à vendre",
   "loading": "Chargement en cours...",
   "loading_please_wait": "Chargement en cours, veuillez patienter",
@@ -749,6 +750,7 @@
   "repeat": "Répéter",
   "request_burst": "Request BURST",
   "returning_user_q": "Déjà inscrit ?",
+  "reward_recipient": "Récipiendaire de la récompense",
   "same_out": "Same Amount",
   "search_aliases": "Rechercher un alias...",
   "search_assets": "Rechercher des actifs...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Afficher le bouton de la console de log",
   "signature_hash": "Hachage de la signature",
   "signed_transaction_bytes": "Octets de la transaction signés",
+  "smart_contract": "Contrat intelligent",
+  "smart_contract_creation": "Création de contrat intelligent",
+  "smart_contract_payment": "Paiement du contrat intelligent",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "la norme",
   "start_date": "Date de début",
