--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "मात्रा एक पूर्णांक होनी चाहिए।",
   "error_word_list": "Word सूची को लोड नहीं कर सका...",
   "error_wrong_buyer_for_alias": "उपनाम के लिए गलत खरीदार।",
-  "escrow": "Escrow",
+  "escrow": "एस्क्रो",
   "experimental_release": "प्रयोगात्मक रिलीज",
   "export_contact": "संपर्क निर्यात करें",
   "failed": "में असफल रहा",
@@ -511,6 +511,7 @@
   "last_feeder": "पिछले फीडर",
   "last_feeder_height": "पिछले फीडर ऊँचाई",
   "last_updated": "अंतिम अद्यतन",
+  "leasing": "पट्टा",
   "list_product_for_sale": "बिक्री के लिए उत्पाद सूची में डालें",
   "loading": "लोड हो रहा है...",
   "loading_please_wait": "लोड हो रहा है, कृपया प्रतीक्षा करें",
@@ -749,6 +750,7 @@
   "repeat": "दोहराएँ",
   "request_burst": "Request BURST",
   "returning_user_q": "वापिस आये उपयोगकर्ता (यूजर)?",
+  "reward_recipient": "इनाम देने वाला",
   "same_out": "Same Amount",
   "search_aliases": "खोजें उपनाम...",
   "search_assets": "खोज परिसंपत्तियां...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "कंसोल लॉग बटन दिखाएँ",
   "signature_hash": "हस्ताक्षर हैश",
   "signed_transaction_bytes": "हस्ताक्षरित लेनदेन बाइट्स",
+  "smart_contract": "स्मार्ट कॉन्ट्रैक्ट",
+  "smart_contract_creation": "स्मार्ट कॉन्ट्रैक्ट क्रिएशन",
+  "smart_contract_payment": "स्मार्ट अनुबंध का भुगतान",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "मानक",
   "start_date": "प्रारंभ दिनांक",
