--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Količina mora biti iskazana cijelim brojem.",
   "error_word_list": "Nemogućnost učitanja liste riječi...",
   "error_wrong_buyer_for_alias": "Pogrešan kupac pseudonima.",
-  "escrow": "Escrow",
+  "escrow": "escrow",
   "experimental_release": "Eksperimentalna inačica",
   "export_contact": "Export Contacts",
   "failed": "Neuspjeh",
@@ -511,6 +511,7 @@
   "last_feeder": "Posljednji feeder",
   "last_feeder_height": "Pozicija posljednjeg feedera",
   "last_updated": "Posljednje ažurirano",
+  "leasing": "iznajmljivanje",
   "list_product_for_sale": "Ponudi proizvod na prodaju",
   "loading": "Učitavanje...",
   "loading_please_wait": "Učitavanje, molim pričekajte",
@@ -749,6 +750,7 @@
   "repeat": "Ponovite",
   "request_burst": "Request BURST",
   "returning_user_q": "Korisnik povratnik?",
+  "reward_recipient": "Nagrađeni primatelj",
   "same_out": "Same Amount",
   "search_aliases": "Traži pseudonime...",
   "search_assets": "Traži Assete...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Prikaži Log gumb konzole",
   "signature_hash": "Hash potpisa",
   "signed_transaction_bytes": "Potpisana transakcija Bytes",
+  "smart_contract": "Pametni ugovor",
+  "smart_contract_creation": "Stvaranje pametnog ugovora",
+  "smart_contract_payment": "Plaćanje pametnog ugovora",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standard",
   "start_date": "Početni datum",
