--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Kuantitas harus bilangan.",
   "error_word_list": "Tidak dapat memuat daftar kata...",
   "error_wrong_buyer_for_alias": "Pembeli alias salah.",
-  "escrow": "Escrow",
+  "escrow": "Wasiat",
   "experimental_release": "Percobaan Rilis",
   "export_contact": "Export Contacts",
   "failed": "Gagal",
@@ -511,6 +511,7 @@
   "last_feeder": "Pengumpan Terakhir",
   "last_feeder_height": "Terakhir tinggi Feeder",
   "last_updated": "Terakhir kali diperbarui",
+  "leasing": "Leasing",
   "list_product_for_sale": "Daftar Produk untuk Dijual",
   "loading": "Memuat...",
   "loading_please_wait": "Loading, harap tunggu",
@@ -749,6 +750,7 @@
   "repeat": "Ulangi",
   "request_burst": "Request BURST",
   "returning_user_q": "Kembali pengguna?",
+  "reward_recipient": "Penerima Hadiah",
   "same_out": "Same Amount",
   "search_aliases": "Alias Cari...",
   "search_assets": "Cari Aset...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Tampilkan tombol Log konsol",
   "signature_hash": "Tanda tangan Hash",
   "signed_transaction_bytes": "Byte ditandatangani transaksi",
+  "smart_contract": "Kontrak Cerdas",
+  "smart_contract_creation": "Penciptaan Kontrak Cerdas",
+  "smart_contract_payment": "Pembayaran Kontrak Cerdas",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standar",
   "start_date": "Tanggal Mulai",
