--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Quantità deve essere un numero intero.",
   "error_word_list": "Impossibile caricare l'elenco di parole...",
   "error_wrong_buyer_for_alias": "Wrong buyer for alias.",
-  "escrow": "Escrow",
+  "escrow": "Depositare in garanzia",
   "experimental_release": "Rilascio sperimentale",
   "export_contact": "Export Contacts",
   "failed": "Fallito",
@@ -511,6 +511,7 @@
   "last_feeder": "Ultimo inseritore",
   "last_feeder_height": "Altezza ultimo Feeder",
   "last_updated": "Ultima modifica",
+  "leasing": "Leasing",
   "list_product_for_sale": "Elenco prodotti in vendita",
   "loading": "Caricamento...",
   "loading_please_wait": "Caricamento in corso, attendere prego",
@@ -749,6 +750,7 @@
   "repeat": "Ripeti",
   "request_burst": "Request BURST",
   "returning_user_q": "Utente già registrato?",
+  "reward_recipient": "Ricompensa",
   "same_out": "Same Amount",
   "search_aliases": "Ricerca alias...",
   "search_assets": "Ricerca Asset...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Visualizza il pulsante Log Console",
   "signature_hash": "Hash della firma",
   "signed_transaction_bytes": "Bytes di transazione firmata",
+  "smart_contract": "Contratto intelligente",
+  "smart_contract_creation": "Creazione intelligente di contratti",
+  "smart_contract_payment": "Pagamento di Smart Contract",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standard",
   "start_date": "Data inizio",
