--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "量は整数である必要があります。",
   "error_word_list": "単語リストをロードできませんでした.",
   "error_wrong_buyer_for_alias": "間違ったエイリアスの購買者",
-  "escrow": "Escrow",
+  "escrow": "預託",
   "experimental_release": "試験的リリース",
   "export_contact": "Export Contacts",
   "failed": "失敗",
@@ -511,6 +511,7 @@
   "last_feeder": "最後のフィーダー",
   "last_feeder_height": "最新のフィーダーの高さ",
   "last_updated": "最終更新日",
+  "leasing": "リース",
   "list_product_for_sale": "販売のための商品をリストアップ",
   "loading": "読み込んでいます...",
   "loading_please_wait": "読み込み中です。お待ちください。",
@@ -749,6 +750,7 @@
   "repeat": "リピート",
   "request_burst": "Request BURST",
   "returning_user_q": "以前ご利用になられたユーザーですか",
+  "reward_recipient": "報酬受取人",
   "same_out": "Same Amount",
   "search_aliases": "エイリアスを検索",
   "search_assets": "資産を検索",
@@ -789,6 +791,9 @@
   "show_console_log_button": "コンソールのログボタンを表示",
   "signature_hash": "署名のハッシュ",
   "signed_transaction_bytes": "署名されたトランザクションのバイト",
+  "smart_contract": "スマート契約",
+  "smart_contract_creation": "スマート契約の作成",
+  "smart_contract_payment": "スマート契約の支払い",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "標準",
   "start_date": "開始日",
