--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "A quantidade deve ser um número inteiro.",
   "error_word_list": "Não foi possível carregar a lista de palavras...",
   "error_wrong_buyer_for_alias": "Comprador errado para o pseudônimo.",
-  "escrow": "Escrow",
+  "escrow": "Garantia",
   "experimental_release": "Versão experimental",
   "export_contact": "Exportar contatos",
   "failed": "Falhou",
@@ -511,6 +511,7 @@
   "last_feeder": "Ultimo alimentador",
   "last_feeder_height": "Altura do último nodo-transmissor",
   "last_updated": "Atualizado pela última vez",
+  "leasing": "Locação",
   "list_product_for_sale": "Listar produtos a venda",
   "loading": "Carregando...",
   "loading_please_wait": "Carregando, por favor aguarde",
@@ -749,6 +750,7 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "returning_user_q": "Já é usuário?",
+  "reward_recipient": "Destinatário da recompensa",
   "same_out": "Same Amount",
   "search_aliases": "Pesquisar Pseudônimos...",
   "search_assets": "Pesquisar ativos...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Mostrar botão de Log do Console",
   "signature_hash": "Hash da Assinatura",
   "signed_transaction_bytes": "Bytes da transação assinada",
+  "smart_contract": "Contrato Inteligente",
+  "smart_contract_creation": "Criação de Contrato Inteligente",
+  "smart_contract_payment": "Pagamento de contrato inteligente",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Padrão",
   "start_date": "Data de início",
