--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Количество должно быть целым числом.",
   "error_word_list": "Не удалось загрузить список слов...",
   "error_wrong_buyer_for_alias": "Неверный покупатель псевдонима.",
-  "escrow": "Escrow",
+  "escrow": "Условное депонирование",
   "experimental_release": "Экспериментальный релиз",
   "export_contact": "Export Contacts",
   "failed": "Не удалось",
@@ -511,6 +511,7 @@
   "last_feeder": "Последний Источник",
   "last_feeder_height": "Высота блоков у последнего источника",
   "last_updated": "Последнее обновление",
+  "leasing": "лизинг",
   "list_product_for_sale": "Выставить товар на продажу",
   "loading": "Загрузка...",
   "loading_please_wait": "Загрузка, пожалуйста подождите",
@@ -749,6 +750,7 @@
   "repeat": "Повторить",
   "request_burst": "Request BURST",
   "returning_user_q": "Зарегистрированный пользователь?",
+  "reward_recipient": "Получатель вознаграждения",
   "same_out": "Same Amount",
   "search_aliases": "Поиск Псевдонимов...",
   "search_assets": "Поиск активов...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Показать кнопку Журнал консоли",
   "signature_hash": "Хэш Подписи",
   "signed_transaction_bytes": "Подписанные байты транзакции",
+  "smart_contract": "Смарт Контракт",
+  "smart_contract_creation": "Создание смарт-контракта",
+  "smart_contract_payment": "Оплата Смарт Контракт",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "стандарт",
   "start_date": "Дата начала",
