--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Износ мора бити цео број.",
   "error_word_list": "Није могуће учитавање листе речи...",
   "error_wrong_buyer_for_alias": "Погрешан купац алиас-а.",
-  "escrow": "Escrow",
+  "escrow": "Есцров",
   "experimental_release": "Експериментална Верзија",
   "export_contact": "Export Contacts",
   "failed": "Није успело",
@@ -511,6 +511,7 @@
   "last_feeder": "Последњи Феедер",
   "last_feeder_height": "Последња Висина Понуде",
   "last_updated": "Последње Ажурирано",
+  "leasing": "Леасинг",
   "list_product_for_sale": "Понуди Производ На Продају",
   "loading": "Учитавање...",
   "loading_please_wait": "Учитавање, молимо сачекајте",
@@ -749,6 +750,7 @@
   "repeat": "Поновите",
   "request_burst": "Request BURST",
   "returning_user_q": "Корисник Повратник?",
+  "reward_recipient": "Ревард Реципиент",
   "same_out": "Same Amount",
   "search_aliases": "Тражите Алиас-е...",
   "search_assets": "Претражи Асcет-е...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Прикажи Лог Дугме Конзоле",
   "signature_hash": "Hash Потпис",
   "signed_transaction_bytes": "Потписана Трансакција Bytes",
+  "smart_contract": "Смарт Цонтрацт",
+  "smart_contract_creation": "Стварање паметних уговора",
+  "smart_contract_payment": "Плаћање паметног уговора",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Стандард",
   "start_date": "Почетни Датум",
