--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Miktar bir tamsayı olması gerekiyor.",
   "error_word_list": "Sözcük listesi yüklenemedi...",
   "error_wrong_buyer_for_alias": "Rumuz için yanlış alıcı.",
-  "escrow": "Escrow",
+  "escrow": "Emanet",
   "experimental_release": "Deneysel yayın",
   "export_contact": "Kişileri çıkart",
   "failed": "Başarısız",
@@ -511,6 +511,7 @@
   "last_feeder": "Son Besleyici",
   "last_feeder_height": "Last Feeder Height",
   "last_updated": "Son Güncellenme Tarihi",
+  "leasing": "kiralama",
   "list_product_for_sale": "List Product For Sale",
   "loading": "yükleniyor...",
   "loading_please_wait": "Yükleniyor, Lütfen Bekleyin",
@@ -749,6 +750,7 @@
   "repeat": "Tekrarla",
   "request_burst": "Request BURST",
   "returning_user_q": "Returning User?",
+  "reward_recipient": "Ödül Alıcısı",
   "same_out": "Same Amount",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Show Console Log Button",
   "signature_hash": "İmza Hash",
   "signed_transaction_bytes": "Signed Transaction Bytes",
+  "smart_contract": "Akıllı Sözleşme",
+  "smart_contract_creation": "Akıllı Sözleşme Oluşturma",
+  "smart_contract_payment": "Akıllı Sözleşme Ödemesi",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standart",
   "start_date": "Başlangıç tarihi",
