--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -511,6 +511,7 @@
   "last_feeder": "Останнє Джерело",
   "last_feeder_height": "Висота Блоків у Останнього Джерела",
   "last_updated": "Останнє оновлення",
+  "leasing": "Лізинг",
   "list_product_for_sale": "Список товарів для продажу",
   "loading": "Завантаження...",
   "loading_please_wait": "Завантажується, зачекайте будь ласка",
@@ -749,6 +750,7 @@
   "repeat": "Повторити",
   "request_burst": "Request BURST",
   "returning_user_q": "Зареєстрований Користувач?",
+  "reward_recipient": "Одержувач нагороди",
   "same_out": "Same Amount",
   "search_aliases": "Пошук Аліасiв...",
   "search_assets": "Пошук активів...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Відображати кнопку \"консолі  журналу",
   "signature_hash": "Хэш Підпису",
   "signed_transaction_bytes": "Підписані байти транзакції",
+  "smart_contract": "Розумний контракт",
+  "smart_contract_creation": "Створення смарт-контракту",
+  "smart_contract_payment": "Оплата смарт-контракту",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Стандарт",
   "start_date": "Дата початку",
