--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "數量必須是整數。",
   "error_word_list": "無法加載單詞列表...",
   "error_wrong_buyer_for_alias": "別名的錯誤購買者。",
-  "escrow": "Escrow",
+  "escrow": "第三方托管",
   "experimental_release": "測試版本發佈",
   "export_contact": "Export Contacts",
   "failed": "失敗",
@@ -511,6 +511,7 @@
   "last_feeder": "最新節點",
   "last_feeder_height": "最新節點高度",
   "last_updated": "最後更新",
+  "leasing": "租赁",
   "list_product_for_sale": "出售產品",
   "loading": "加載中...",
   "loading_please_wait": "正在加載，請稍候",
@@ -749,6 +750,7 @@
   "repeat": "重復",
   "request_burst": "Request BURST",
   "returning_user_q": "返回的用戶？",
+  "reward_recipient": "奖励收件人",
   "same_out": "Same Amount",
   "search_aliases": "搜索別名...",
   "search_assets": "搜索資產...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "顯示控制台日誌按鈕",
   "signature_hash": "哈希簽名",
   "signed_transaction_bytes": "已簽名的交易字節",
+  "smart_contract": "智能合约",
+  "smart_contract_creation": "智能合约创建",
+  "smart_contract_payment": "支付智能合约",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "标准",
   "start_date": "開始日期",
