--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -511,6 +511,7 @@
   "last_feeder": "Darrer Feeder",
   "last_feeder_height": "Darrera Alçada de l'Alimentador",
   "last_updated": "Darrera actualització",
+  "leasing": "Arrendament",
   "list_product_for_sale": "Llista de Productes a la Venda",
   "loading": "Carregant...",
   "loading_please_wait": "s’Està Carregant, esperi si us plau",
@@ -749,6 +750,7 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "returning_user_q": "Usuari existent?",
+  "reward_recipient": "Destinatari de recompensa",
   "same_out": "Same Amount",
   "search_aliases": "Cercar Àlies...",
   "search_assets": "Cercar Actius...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Mostrar el botó per Iniciar la Consola",
   "signature_hash": "Hash de la Firma",
   "signed_transaction_bytes": "Bytes de la Transacció Firmada",
+  "smart_contract": "Contracte intel·ligent",
+  "smart_contract_creation": "Creació de contractes intel·ligents",
+  "smart_contract_payment": "Pagament del contracte intel·ligent",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Estàndard",
   "start_date": "Data d'inici",
