--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Määrän on oltava kokonaisluku.",
   "error_word_list": "Sanalistaa ei pystytty lataamaan...",
   "error_wrong_buyer_for_alias": "Väärä ostaja aliakselle.",
-  "escrow": "Escrow",
+  "escrow": "escrow",
   "experimental_release": "Kokeellinen julkaisu",
   "export_contact": "Export Contacts",
   "failed": "Epäonnistui",
@@ -511,6 +511,7 @@
   "last_feeder": "Viimeinen syöttäjä",
   "last_feeder_height": "Viimeisen syötteen korkeus",
   "last_updated": "Viimeksi päivitetty",
+  "leasing": "liisaus",
   "list_product_for_sale": "Listaa tuote myyntiin",
   "loading": "Ladataan...",
   "loading_please_wait": "Ladataan, odota hetki",
@@ -749,6 +750,7 @@
   "repeat": "Toista",
   "request_burst": "Request BURST",
   "returning_user_q": "Vanha käyttäjä?",
+  "reward_recipient": "Palkinnon saaja",
   "same_out": "Same Amount",
   "search_aliases": "Hae aliasta...",
   "search_assets": "Etsi arvopaperia...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Näytä Konsoli Loki-painike",
   "signature_hash": "Allekirjoituksen tarkiste",
   "signed_transaction_bytes": "Allekirjoitetun tapahtumat tavut",
+  "smart_contract": "Älykäs sopimus",
+  "smart_contract_creation": "Älykäs sopimusten luominen",
+  "smart_contract_payment": "Älykkään sopimuksen maksaminen",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "standardi",
   "start_date": "Aloituspäivä",
