--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -511,6 +511,7 @@
   "last_feeder": "Laatste Feeder",
   "last_feeder_height": "Laatste Feeder hoogte",
   "last_updated": "Laatst bijgewerkt",
+  "leasing": "verpachting",
   "list_product_for_sale": "Lijst Product voor verkoop",
   "loading": "Laden...",
   "loading_please_wait": "Bezig met laden, even geduld a.u.b.",
@@ -749,6 +750,7 @@
   "repeat": "Herhaal",
   "request_burst": "Request BURST",
   "returning_user_q": "Terugkerende Gebruiker?",
+  "reward_recipient": "Beloning Ontvanger",
   "same_out": "Same Amount",
   "search_aliases": "Zoek Aliassen...",
   "search_assets": "Zoek Asset...",
@@ -789,6 +791,9 @@
   "show_console_log_button": "Console Log knop weergeven",
   "signature_hash": "Handtekening Hash",
   "signed_transaction_bytes": "Ondertekende transactie Bytes",
+  "smart_contract": "Slim contract",
+  "smart_contract_creation": "Slimme contractvorming",
+  "smart_contract_payment": "Betaling van Smart Contract",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standaard",
   "start_date": "Begindatum",
